--- a/style.css
+++ b/style.css
@@ -1,4 +1,48 @@
-.imagenCono1 {
-    background-image: url('https://github.com/BranCG/EVA2/blob/main/img/cono11.png');
+/**nav bar**/
+.participa{
+    font-size: 20px; 
+    border: 5px solid red;
+}
+.somos{
+    font-size: 20px;
+}
+.terminos{
+    font-size: 20px;
 }
 
+/**rows**/
+.row1 {
+    text-align: center;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; 
+    font-size: 30px; 
+}
+.row2{
+    margin-top: 100px; 
+    font-size: 18;
+}
+
+.row3{
+    margin-top: 100px; 
+}
+.row4{
+    margin-top: 100px;
+}
+.row5{
+    margin-top: 100px; 
+    margin-bottom: 20px
+}
+
+.row6{
+    font-size: 20px; 
+    text-align: center;
+    font-family: monospace;
+    border-radius: 30px; 
+    border: 8px solid yellow
+}
+
+.tituloForm{
+    color: yellow; 
+    font-size: 30px;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; 
+    margin-top:50px;
+}
