--- a/style.css
+++ b/style.css
@@ -1,52 +1,73 @@
-/**nav bar**/
-.participa{
-    font-size: 20px; 
+/**navegacionn nav bar**/
+.participa {
+    font-size: 20px;
     border: 5px solid red;
 }
-.somos{
-    font-size: 20px;
-}
-.terminos{
+
+.somos {
     font-size: 20px;
 }
 
-/**rows**/
+.terminos {
+    font-size: 20px;
+}
+
+.enviar{
+    height: 60px; 
+    width: 300px; 
+    font-size: 16px; 
+    margin-bottom: 100px;
+    border: 5px solid;
+}
+
+/**cajas y cajas..**/
 .row1 {
     text-align: center;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; 
-    font-size: 30px; 
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-size: 30px;
 }
-.row2{
-    margin-top: 100px; 
+
+.row2 {
+    margin-top: 100px;
     font-size: 18;
 }
 
-.row3{
-    margin-top: 100px; 
-}
-.row4{
+.row3 {
     margin-top: 100px;
 }
-.row5{
-    margin-top: 100px; 
-    margin-bottom: 20px
+
+.row4 {
+    margin-top: 100px;
 }
 
-.row6{
-    font-size: 20px; 
+.row5 {
+    margin-top: 100px;
+    margin-bottom: 20px;
+}
+
+.row6 {
+    font-size: 20px;
     text-align: center;
     font-family: monospace;
-    border-radius: 30px; 
-    border: 8px solid yellow
+    border-radius: 30px;
+    border: 8px solid yellow;
 }
 
-.tituloForm{
-    color: yellow; 
+.tituloForm {
+    color: yellow;
     font-size: 30px;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; 
-    margin-top:50px;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    margin-top: 50px;
 }
 
+.textoTerminoCondi {
+    font-size: 18px; 
+    font-family: monospace; 
+    color: white;
+    border: 1px solid yellow;
+}
+
+/**hoverrrr**/
 .box1:hover{
     transform: rotateY(360deg);
     transition: 2s;
